--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -5,15 +5,15 @@ html
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //- Angular Material style sheet
-    link(rel='stylesheet', href='/angular-material/angular-material.min.css')
+    link(rel='stylesheet', href='http://cdn.bootcss.com/angular-material/1.1.1/angular-material.min.css')
   body(ng-app='Layout', ng-cloak)
     | 欢迎来到时间轴
     //- Angular Material requires Angular.js Libraries
-    script(src='/angular/angular.min.js')
-    script(src='/angular-animate/angular-animate.min.js')
-    script(src='/angular-aria/angular-aria.min.js')
-    script(src='/angular-messages/angular-messages.min.js')
+    script(src='http://cdn.bootcss.com/angular.js/1.5.8/angular.min.js')
+    script(src='http://cdn.bootcss.com/angular.js/1.5.8/angular-animate.min.js')
+    script(src='http://cdn.bootcss.com/angular.js/1.5.8/angular-aria.min.js')
+    script(src='http://cdn.bootcss.com/angular.js/1.5.8/angular-messages.min.js')
     //- Angular Material Library
-    script(src='/angular-material/angular-material.min.js')
+    script(src='http://cdn.bootcss.com/angular-material/1.1.1/angular-material.min.js')
     //- 自己的应用引导
-    script(src='/js/layout.js')
+    script(src='../js/layout.js')
