完成个人主页的基本架构

--- a/code/source/sass/myself.sass
+++ b/code/source/sass/myself.sass
@@ -14,5 +14,19 @@
     height: 80px
     border-radius: 40px
     position: absolute
-    left: 16px
+    left: 12px
     top: 104px
+
+  .attribute
+    color: #525252
+    text-align: center
+    padding: 6px 0px 2px 0px
+  .value
+    font-size: 1.2em
+    text-align: center
+    padding: 2px 0px 6px 0px
+
+  .md-flat
+    margin-top: 12px
+    margin-bottom: 12px
+    background: rgb(240, 240, 240)
