--- a/code/source/pug/myself.pug
+++ b/code/source/pug/myself.pug
@@ -4,3 +4,36 @@ md-content(ng-controller='myselfController as mc')
   div.userContainer(layout='column')
     div.userBackground(style='background-image: url("{{mc.userInfomation.backgroundUrl}}")')
     img.avatar.md-whiteframe-2dp(ng-src='{{mc.userInfomation.avatarUrl}}')
+    div(flex, layout='row')
+      span(flex='25')
+      span(flex='25', layout='column')
+        div.attribute 节点
+        div.value {{mc.userInfomation.numberOfNodes}}
+      span(flex='25')
+        div.attribute 交点
+        div.value {{mc.userInfomation.numberOfIntersections}}
+      span(flex='25', layout='column')
+        div.attribute 关注
+        div.value {{mc.userInfomation.numberOfFollowers}}
+  md-divider
+  md-tabs(md-dynamic-height md-border-bottom, md-stretch-tabs='yes')
+    md-tab
+      md-tab-label
+        md-icon(md-svg-icon='../svg/pictures.svg')
+      md-tab-body.md-padding
+        include pictures
+    md-tab
+      md-tab-label
+        md-icon(md-svg-icon='../svg/timeline.svg')
+      md-tab-body.md-padding
+        include timeline
+    md-tab
+      md-tab-label
+        md-icon(md-svg-icon='../svg/relationship.svg')
+      md-tab-body.md-padding
+        include relationship
+    md-tab
+      md-tab-label
+        md-icon(md-svg-icon='../svg/punchedCard.svg')
+      md-tab-body.md-padding
+        include punchedCard
