--- a/code/static/css/myself.css
+++ b/code/static/css/myself.css
@@ -12,5 +12,17 @@
     height: 80px;
     border-radius: 40px;
     position: absolute;
-    left: 16px;
+    left: 12px;
     top: 104px; }
+  .userContainer .attribute {
+    color: #525252;
+    text-align: center;
+    padding: 6px 0px 2px 0px; }
+  .userContainer .value {
+    font-size: 1.2em;
+    text-align: center;
+    padding: 2px 0px 6px 0px; }
+  .userContainer .md-flat {
+    margin-top: 12px;
+    margin-bottom: 12px;
+    background: #f0f0f0; }
