--- a/code/source/pug/pictures.pug
+++ b/code/source/pug/pictures.pug
@@ -1,1 +1,4 @@
-md-content.md-padding 这是全放照片的那个页面
+link(rel='stylesheet', href='../css/pictures.css')
+
+md-content.md-padding.greyBackground(ng-controller='picturesController as pc')
+  div 这是全放照片的那个页面
