--- a/code/source/pug/punchedCard.pug
+++ b/code/source/pug/punchedCard.pug
@@ -1,1 +1,2 @@
-md-content.md-padding 这是放日历的那个页面
+md-content.md-padding.greyBackground(ng-controller='punchedCardController as pcc')
+  div 这是放日历的那个页面
