--- a/code/source/pug/relationship.pug
+++ b/code/source/pug/relationship.pug
@@ -1,1 +1,2 @@
-md-content.md-padding 这是放关系轴的那个页面
+md-content.md-padding.greyBackground(ng-controller='relationshipController as rc')
+  div 这是放关系轴的那个页面
