--- a/code/source/pug/timeline.pug
+++ b/code/source/pug/timeline.pug
@@ -1,1 +1,2 @@
-md-content.md-padding 这是放时间轴的那个页面
+md-content.md-padding.greyBackground(ng-controller='timelineController as tc')
+  div 这是放时间轴的那个页面
