--- a/code/source/sass/myself.sass
+++ b/code/source/sass/myself.sass
@@ -30,3 +30,8 @@
     margin-top: 12px
     margin-bottom: 12px
     background: rgb(240, 240, 240)
+
+.addButton
+  position: fixed
+  right: 12px
+  bottom: 12px
