--- a/code/static/css/pictures.css
+++ b/code/static/css/pictures.css
@@ -1,2 +1,6 @@
 .greyBackground {
   background-color: #f2f2f2 !important; }
+  .greyBackground .leftCard {
+    margin-right: 0px; }
+  .greyBackground .rightCard {
+    margin-left: 0px; }
