--- a/code/static/css/myself.css
+++ b/code/static/css/myself.css
@@ -26,3 +26,8 @@
     margin-top: 12px;
     margin-bottom: 12px;
     background: #f0f0f0; }
+
+.addButton {
+  position: fixed;
+  right: 12px;
+  bottom: 12px; }
