删除多余的图片，修改细节

--- a/code/source/pug/pictures.pug
+++ b/code/source/pug/pictures.pug
@@ -1,12 +1,12 @@
 link(rel='stylesheet', href='../css/pictures.css')
 
-md-content.greyBackground(ng-controller='picturesController as pc', layout='row')
+md-content.picturesBackground(ng-controller='picturesController as pc', layout='row')
   div(flex='33')
     md-card.leftCard(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 0')
-      img(ng-src='{{picture}}')
+      img(ng-src='{{picture.url}}')
   div(flex='33')
     md-card(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 1')
-      img(ng-src='{{picture}}')
+      img(ng-src='{{picture.url}}')
   div(flex='33')
     md-card.rightCard(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 2')
-      img(ng-src='{{picture}}')
+      img(ng-src='{{picture.url}}')
