--- a/code/static/css/pictures.css
+++ b/code/static/css/pictures.css
@@ -1,6 +1,6 @@
-.greyBackground {
+.picturesBackground {
   background-color: #f2f2f2 !important; }
-  .greyBackground .leftCard {
+  .picturesBackground .leftCard {
     margin-right: 0px; }
-  .greyBackground .rightCard {
+  .picturesBackground .rightCard {
     margin-left: 0px; }
