--- a/code/source/pug/myself.pug
+++ b/code/source/pug/myself.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', type='text/css', href='../css/myself.css')
 
-md-content(ng-controller='myselfController as mc')
+md-content(ng-controller='myselfController as mc' style="height:800px;")
   div.userContainer(layout='column')
     div.userBackground(style='background-image: url("{{mc.userInfomation.backgroundUrl}}")')
     img.avatar.md-whiteframe-2dp(ng-src='{{mc.userInfomation.avatarUrl}}')
