--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -1,2 +1,16 @@
 .relationBackground
   padding: 0
+
+.md-button.md-fab.md-mini
+  color: rgba(180, 180, 180, 1)
+  background-color: white !important
+  border-width: 6px
+  border-style: solid
+  border-color: grey
+  line-height: 0px
+
+.md-button.md-fab.md-mini:not([disabled]):hover
+  background-color: #E91E63 !important
+
+.md-button.md-fab.md-mini[disabled]
+  background-color: white
