--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -14,3 +14,12 @@
 
 .md-button.md-fab.md-mini[disabled]
   background-color: white
+
+md-list-item, md-list-item .md-list-item-inner
+    min-height: 55px
+    height: 60px
+
+#face img
+  opacity: 0
+  height: inherit
+  width: inherit
