更改页面顺序，修改关系页面

--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -19,7 +19,7 @@ html
             md-icon(md-svg-icon='{{lc.svgs.others}}')
           md-button.md-icon-button(aria-label='Search')
             md-icon(md-svg-icon='../svg/search.svg')
-      md-content.fullscreen(ui-view, flex)
+      md-content.fullscreen(ui-view, flex, id="fullscreen")
     //- Angular Material requires Angular.js Libraries
     script(src='../js/angular.min.js')
     script(src='../js/angular-animate.min.js')
