--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -1,25 +1,9 @@
 .relationBackground
-  padding: 0
+  .md-button.md-fab.md-mini:not([disabled]):hover
+    background-color: #E91E63 !important
 
-.md-button.md-fab.md-mini
-  color: rgba(180, 180, 180, 1)
-  background-color: white !important
-  border-width: 6px
-  border-style: solid
-  border-color: grey
-  line-height: 0px
+  .md-button.md-fab.md-mini[disabled]
+    background-color: white
 
-.md-button.md-fab.md-mini:not([disabled]):hover
-  background-color: #E91E63 !important
-
-.md-button.md-fab.md-mini[disabled]
-  background-color: white
-
-md-list-item, md-list-item .md-list-item-inner
-    min-height: 55px
-    height: 60px
-
-#face img
-  opacity: 0
-  height: inherit
-  width: inherit
+  .avatar
+    margin: 8px 12px 8px 12px
