添加注释，添加对照片详情页的路由

--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -36,3 +36,4 @@ html
     script(src='../js/punchedCard.js')
     script(src='../js/relationship.js')
     script(src='../js/timeline.js')
+    script(src='../js/photo.js')
