--- a/code/source/pug/pictures.pug
+++ b/code/source/pug/pictures.pug
@@ -3,10 +3,10 @@ link(rel='stylesheet', href='../css/pictures.css')
 md-content.picturesBackground(ng-controller='picturesController as pc', layout='row')
   div(flex='33')
     md-card.leftCard(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 0')
-      img(ng-src='{{picture.url}}')
+      img(ng-src='{{picture.url}}', ng-click='mc.navigateToPhoto(picture.id)')
   div(flex='33')
     md-card(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 1')
-      img(ng-src='{{picture.url}}')
+      img(ng-src='{{picture.url}}', ng-click='mc.navigateToPhoto(picture.id)')
   div(flex='33')
     md-card.rightCard(ng-repeat='picture in pc.pictures', ng-if='$index % 3 == 2')
-      img(ng-src='{{picture.url}}')
+      img(ng-src='{{picture.url}}', ng-click='mc.navigateToPhoto(picture.id)')
