--- a/code/source/pug/punchedCard.pug
+++ b/code/source/pug/punchedCard.pug
@@ -1,2 +1,5 @@
+link(rel='stylesheet', type='text/css', href='../css/punchedCard.css')
+
 md-content.md-padding.greyBackground(ng-controller='punchedCardController as pcc')
-  div 这是放日历的那个页面
+  div(layout="column" layout-align="center stretch" )
+      md-calendar(class="fixed-calendar" ng-model="myDate" md-min-date="minDate" md-max-date="maxDate" md-date-filter="theDate")
