完成punchcard的主体功能

--- a/code/source/sass/punchedCard.sass
+++ b/code/source/sass/punchedCard.sass
@@ -11,8 +11,7 @@
     height: 100% !important
   .md-calendar-scroll-container
     width: 100% !important
-  .md-calendar-date-selection-indicator
-    background: rgb(33,150,243)
+    height: 100% !important
 
 .md-calendar
   width: 100%
