创建的路由，为服务器增加容错

--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -39,3 +39,4 @@ html
     script(src='../js/relationship.js')
     script(src='../js/timeline.js')
     script(src='../js/photo.js')
+    script(src='../js/newPost.js')
