--- a/code/source/pug/myself.pug
+++ b/code/source/pug/myself.pug
@@ -37,5 +37,5 @@ md-content(ng-controller='myselfController as mc')
         md-icon(md-svg-icon='../svg/punchedCard.svg')
       md-tab-body.md-padding
         include punchedCard
-  md-button.md-fab.addButton(aria-label='Add')
+  md-button.md-fab.addButton(aria-label='Add', ng-click='mc.newPost()')
     md-icon(md-svg-src='../svg/add.svg')
