--- a/code/source/sass/punchedCard.sass
+++ b/code/source/sass/punchedCard.sass
@@ -1,17 +1,31 @@
-.fixed-calendar
+.md-calendar-day-header
   width: 100%
-  height: 100%
-  display: block
-  .md-calendar-day-header
-    width: 100% !important
-  .md-calendar-scroll-mask
-    width: 100% !important
-  .md-virtual-repeat-scroller
-    width: 100% !important
-    height: 100% !important
-  .md-calendar-scroll-container
-    width: 100% !important
-    height: 100% !important
+  thead
+    background-color: #2196F3
+    color: white
+    th
+      padding: 0px !important
 
-.md-calendar
-  width: 100%
+.md-calendar-scroll-mask
+  width: 100% !important
+  .md-virtual-repeat-container
+    width: 100%
+    .md-virtual-repeat-scroller
+      width: 100% !important
+      .md-calendar
+        width: 100%
+        .md-calendar-month-label
+          width: 42.8571429%
+        tr
+          box-sizing: border-box
+          margin: 0px 16px 0px 16px
+          .md-calendar-date
+            width: 14.2857143%
+            padding-left: 0px !important
+            padding-right: 0px !important
+
+.md-calendar-selected-date
+  .md-calendar-date-selection-indicator
+    background-color: #BBDEFB !important
+    color: #1976D2 !important
+    font-weight: bold
