--- a/code/source/sass/punchedCard.sass
+++ b/code/source/sass/punchedCard.sass
@@ -1,31 +1,34 @@
-.md-calendar-day-header
-  width: 100%
-  thead
-    background-color: #2196F3
-    color: white
-    th
-      padding: 0px !important
+.punchedCardBackground
+  background-color: #f2f2f2 !important
 
-.md-calendar-scroll-mask
-  width: 100% !important
-  .md-virtual-repeat-container
+  .md-calendar-day-header
     width: 100%
-    .md-virtual-repeat-scroller
-      width: 100% !important
-      .md-calendar
-        width: 100%
-        .md-calendar-month-label
-          width: 42.8571429%
-        tr
-          box-sizing: border-box
-          margin: 0px 16px 0px 16px
-          .md-calendar-date
-            width: 14.2857143%
-            padding-left: 0px !important
-            padding-right: 0px !important
+    thead
+      background-color: #2196F3
+      color: white
+      th
+        padding: 0px !important
 
-.md-calendar-selected-date
-  .md-calendar-date-selection-indicator
-    background-color: #BBDEFB !important
-    color: #1976D2 !important
-    font-weight: bold
+  .md-calendar-scroll-mask
+    width: 100% !important
+    .md-virtual-repeat-container
+      width: 100%
+      .md-virtual-repeat-scroller
+        width: 100% !important
+        .md-calendar
+          width: 100%
+          .md-calendar-month-label
+            width: 42.8571429%
+          tr
+            box-sizing: border-box
+            margin: 0px 16px 0px 16px
+            .md-calendar-date
+              width: 14.2857143%
+              padding-left: 0px !important
+              padding-right: 0px !important
+
+  .md-calendar-selected-date
+    .md-calendar-date-selection-indicator
+      background-color: #BBDEFB !important
+      color: #1976D2 !important
+      font-weight: bold
