--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -1,9 +1,26 @@
 .relationBackground
-  .md-button.md-fab.md-mini:not([disabled]):hover
-    background-color: #E91E63 !important
+  position: relative
 
-  .md-button.md-fab.md-mini[disabled]
-    background-color: white
+  canvas
+    background-color: #f2f2f2
+    position: absolute
+    top: 0px
+    z-index: 1
 
-  .avatar
-    margin: 8px 12px 8px 12px
+  .md-subheader-inner
+    padding-left: 8px
+
+  md-list-item
+    .md-button.md-fab.md-mini
+      color: #616161
+      background-color: white
+      border-style: solid
+      border-width: 6px
+      line-height: 0px
+
+    .md-button.md-fab.md-mini:not([disabled]):hover
+      background-color: #FF4081 !important
+      color: white !important
+
+    .avatar
+      margin: 8px 12px 8px 12px
