--- a/code/static/css/punchedCard.css
+++ b/code/static/css/punchedCard.css
@@ -1,30 +1,30 @@
-.md-calendar-day-header {
-  width: 100%; }
-  .md-calendar-day-header thead {
-    background-color: #2196F3;
-    color: white; }
-    .md-calendar-day-header thead th {
-      padding: 0px !important; }
-
-.md-calendar-scroll-mask {
-  width: 100% !important; }
-  .md-calendar-scroll-mask .md-virtual-repeat-container {
+.punchedCardBackground {
+  background-color: #f2f2f2 !important; }
+  .punchedCardBackground .md-calendar-day-header {
     width: 100%; }
-    .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller {
-      width: 100% !important; }
-      .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar {
-        width: 100%; }
-        .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar .md-calendar-month-label {
-          width: 42.8571429%; }
-        .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar tr {
-          box-sizing: border-box;
-          margin: 0px 16px 0px 16px; }
-          .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar tr .md-calendar-date {
-            width: 14.2857143%;
-            padding-left: 0px !important;
-            padding-right: 0px !important; }
-
-.md-calendar-selected-date .md-calendar-date-selection-indicator {
-  background-color: #BBDEFB !important;
-  color: #1976D2 !important;
-  font-weight: bold; }
+    .punchedCardBackground .md-calendar-day-header thead {
+      background-color: #2196F3;
+      color: white; }
+      .punchedCardBackground .md-calendar-day-header thead th {
+        padding: 0px !important; }
+  .punchedCardBackground .md-calendar-scroll-mask {
+    width: 100% !important; }
+    .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container {
+      width: 100%; }
+      .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller {
+        width: 100% !important; }
+        .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar {
+          width: 100%; }
+          .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar .md-calendar-month-label {
+            width: 42.8571429%; }
+          .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar tr {
+            box-sizing: border-box;
+            margin: 0px 16px 0px 16px; }
+            .punchedCardBackground .md-calendar-scroll-mask .md-virtual-repeat-container .md-virtual-repeat-scroller .md-calendar tr .md-calendar-date {
+              width: 14.2857143%;
+              padding-left: 0px !important;
+              padding-right: 0px !important; }
+  .punchedCardBackground .md-calendar-selected-date .md-calendar-date-selection-indicator {
+    background-color: #BBDEFB !important;
+    color: #1976D2 !important;
+    font-weight: bold; }
