--- a/code/static/css/relationship.css
+++ b/code/static/css/relationship.css
@@ -1,8 +1,20 @@
-.relationBackground .md-button.md-fab.md-mini:not([disabled]):hover {
-  background-color: #E91E63 !important; }
-
-.relationBackground .md-button.md-fab.md-mini[disabled] {
-  background-color: white; }
-
-.relationBackground .avatar {
-  margin: 8px 12px 8px 12px; }
+.relationBackground {
+  position: relative; }
+  .relationBackground canvas {
+    background-color: #f2f2f2;
+    position: absolute;
+    top: 0px;
+    z-index: 1; }
+  .relationBackground .md-subheader-inner {
+    padding-left: 8px; }
+  .relationBackground md-list-item .md-button.md-fab.md-mini {
+    color: #616161;
+    background-color: white;
+    border-style: solid;
+    border-width: 6px;
+    line-height: 0px; }
+  .relationBackground md-list-item .md-button.md-fab.md-mini:not([disabled]):hover {
+    background-color: #FF4081 !important;
+    color: white !important; }
+  .relationBackground md-list-item .avatar {
+    margin: 8px 12px 8px 12px; }
