--- a/code/source/pug/layout.pug
+++ b/code/source/pug/layout.pug
@@ -6,6 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //- Angular Material style sheet
     link(rel='stylesheet', href='../css/angular-material.min.css')
+    link(rel='stylesheet', type='text/css', href='../css/layout.css')
   body(ng-app='Layout', layout='column', md-theme='default', ng-cloak, ng-controller='layoutController as lc')
     md-content(layout='column')
       md-toolbar
