--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -8,6 +8,8 @@
     z-index: 1
 
   .md-subheader-inner
+    color: #525252
+    font-size: 1em
     padding-left: 8px
 
   md-list-item
@@ -17,6 +19,10 @@
       border-style: solid
       border-width: 6px
       line-height: 0px
+
+    .md-button.md-fab.md-mini:not([disabled]).md-focused
+      background-color: white !important
+      color: #616161 !important
 
     .md-button.md-fab.md-mini:not([disabled]):hover
       background-color: #FF4081 !important
