--- a/code/static/css/relationship.css
+++ b/code/static/css/relationship.css
@@ -6,6 +6,8 @@
     top: 0px;
     z-index: 1; }
   .relationBackground .md-subheader-inner {
+    color: #525252;
+    font-size: 1em;
     padding-left: 8px; }
   .relationBackground md-list-item .md-button.md-fab.md-mini {
     color: #616161;
@@ -13,6 +15,9 @@
     border-style: solid;
     border-width: 6px;
     line-height: 0px; }
+  .relationBackground md-list-item .md-button.md-fab.md-mini:not([disabled]).md-focused {
+    background-color: white !important;
+    color: #616161 !important; }
   .relationBackground md-list-item .md-button.md-fab.md-mini:not([disabled]):hover {
     background-color: #FF4081 !important;
     color: white !important; }
