--- a/code/source/sass/relationship.sass
+++ b/code/source/sass/relationship.sass
@@ -2,7 +2,6 @@
   position: relative
 
   canvas
-    background-color: #f2f2f2
     position: absolute
     top: 0px
     z-index: 1
@@ -11,22 +10,29 @@
     color: #525252
     font-size: 1em
     padding-left: 8px
+  md-list
+    z-index: 10 !important
 
-  md-list-item
-    .md-button.md-fab.md-mini
-      color: #616161
-      background-color: white
-      border-style: solid
-      border-width: 6px
-      line-height: 0px
+    md-list-item
+      background-color: #f2f2f2
+      
+      .md-button.md-fab.md-mini
+        color: #616161
+        background-color: white
+        border-style: solid
+        border-width: 6px
+        line-height: 0px
 
-    .md-button.md-fab.md-mini:not([disabled]).md-focused
-      background-color: white !important
-      color: #616161 !important
+      .md-button.md-fab.md-mini:not([disabled]).md-focused
+        background-color: white !important
+        color: #616161 !important
 
-    .md-button.md-fab.md-mini:not([disabled]):hover
-      background-color: #FF4081 !important
-      color: white !important
+      .md-button.md-fab.md-mini:not([disabled]):hover
+        background-color: #FF4081 !important
+        color: white !important
 
-    .avatar
-      margin: 8px 12px 8px 12px
+      img
+        outline: none
+
+      .avatar
+        margin: 8px 12px 8px 12px
