--- a/code/source/pug/newPost.pug
+++ b/code/source/pug/newPost.pug
@@ -1,1 +1,14 @@
-md-content(ng-controller='newPostController as nc')
+link(rel='stylesheet', type='text/css', href='../css/newPost.css')
+
+md-content.newPostBackground(ng-controller='newPostController as nc')
+  md-card.md-padding
+    textarea.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
+  md-card(layout='column')
+    md-button.addFriend(ng-click='showFriendsList()')
+      md-icon(md-svg-src='../svg/circleAdd.svg')
+      span 邀请好友合并节点
+    div
+      md-list-item.md-padding.noright(ng-repeat='friend in friends')
+        img.md-avatar(ng-src='{{friend.avatar}}')
+        p {{friend.name}}
+        md-checkbox.md-secondary(ng-model='friend.isSelected')
