--- a/code/source/pug/photo.pug
+++ b/code/source/pug/photo.pug
@@ -1,1 +1,18 @@
-md-content(ng-controller='photoController as phc')
+md-content(ng-controller='photoController as phc' class="md-padding" layout-xs="column" layout="row")
+    md-card
+        img(ng-src="{{imagePath}}" class="md-card-image" alt="Washed Out")
+    md-card
+        md-card-title
+            md-card-title-text
+                span(class="md-headline") 又一次拯救了世界
+        md-card-content
+            p 今天，我又一次拯救了世界
+            p 但是我什么都没有说，深藏功与名
+    md-card
+        md-card-actions(layout="row" layout-align="end center")
+            md-button(class="md-icon-button" aria-label="Favorite")
+                md-icon(md-svg-icon="../svg/favorite.svg")
+            md-button(class="md-icon-button" aria-label="Settings")
+                md-icon(md-svg-icon="../svg/menu.svg")
+            md-button(class="md-icon-button" aria-label="Share")
+                md-icon(md-svg-icon="../svg/share.svg")
