--- a/code/source/sass/myself.sass
+++ b/code/source/sass/myself.sass
@@ -31,6 +31,9 @@
     margin-bottom: 12px
     background: rgb(240, 240, 240)
 
+  md-tabs-content-wrapper
+    height: 100%
+
 .addButton
     position: fixed
     right: 12px
