--- a/code/source/pug/myself.pug
+++ b/code/source/pug/myself.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', type='text/css', href='../css/myself.css')
 
-md-content(ng-controller='myselfController as mc')
+md-content(ng-controller='myselfController as mc', style='height: 100%;')
   div.userContainer(layout='column')
     div.userBackground(style='background-image: url("{{mc.userInfomation.backgroundUrl}}")')
     img.avatar.md-whiteframe-2dp(ng-src='{{mc.userInfomation.avatarUrl}}')
@@ -16,7 +16,7 @@ md-content(ng-controller='myselfController as mc')
         div.attribute 关注
         div.value {{mc.userInfomation.numberOfFollowers}}
   md-divider
-  md-tabs(md-dynamic-height md-border-bottom, md-stretch-tabs='yes')
+  md-tabs(md-dynamic-height md-border-bottom, md-stretch-tabs='yes', style='height: 100%')
     md-tab
       md-tab-label
         md-icon(md-svg-icon='../svg/timeline.svg')
