--- a/code/source/pug/timeline.pug
+++ b/code/source/pug/timeline.pug
@@ -1,2 +1,4 @@
-md-content.md-padding.greyBackground(ng-controller='timelineController as tc')
+link(rel='stylesheet', href='../css/timeline.css')
+
+md-content.md-padding.timelineBackground(ng-controller='timelineController as tc')
   div 这是放时间轴的那个页面
