--- a/code/source/sass/photo.sass
+++ b/code/source/sass/photo.sass
@@ -1,2 +1,16 @@
 .photoBackground
   background-color: #f2f2f2 !important
+  height: 100%
+
+  .username
+    font-size: 1.2em
+    color: #525252
+    line-height: 40px
+
+  .imageContainer
+    width: 100%
+    height: 300px
+    background-repeat: no-repeat
+    background-position: center center
+    background-size: cover
+    -webkit-background-size: cover
