--- a/code/static/css/photo.css
+++ b/code/static/css/photo.css
@@ -1,2 +1,14 @@
 .photoBackground {
-  background-color: #f2f2f2 !important; }
+  background-color: #f2f2f2 !important;
+  height: 100%; }
+  .photoBackground .username {
+    font-size: 1.2em;
+    color: #525252;
+    line-height: 40px; }
+  .photoBackground .imageContainer {
+    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    -webkit-background-size: cover; }
