--- a/code/static/css/newPost.css
+++ b/code/static/css/newPost.css
@@ -1,5 +1,6 @@
 .newPostBackground {
-  background-color: #f2f2f2 !important; }
+  background-color: #f2f2f2 !important;
+  height: 100%; }
   .newPostBackground .simpleTextarea {
     border: 0;
     outline: none;
