给每个页面加上 ng-cloak

--- a/code/source/pug/photo.pug
+++ b/code/source/pug/photo.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', href='../css/photo.css')
 
-md-content.photoBackground(ng-controller='photoController as phc' layout-xs="column" layout="row")
+md-content.photoBackground(ng-cloak ng-controller='photoController as phc' layout-xs="column" layout="row")
   md-card
     md-card-header
       md-card-avatar
