--- a/code/source/pug/timeline.pug
+++ b/code/source/pug/timeline.pug
@@ -1,4 +1,4 @@
 link(rel='stylesheet', href='../css/timeline.css')
 
-md-content.md-padding.timelineBackground(ng-controller='timelineController as tc')
+md-content.md-padding.timelineBackground(ng-cloak ng-controller='timelineController as tc')
   div 这是放时间轴的那个页面
