--- a/code/source/pug/newPost.pug
+++ b/code/source/pug/newPost.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', type='text/css', href='../css/newPost.css')
 
-md-content.newPostBackground(ng-controller='newPostController as nc')
+md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc')
   md-card.md-padding
     textarea.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
   md-card(layout='column')
