--- a/code/source/pug/punchedCard.pug
+++ b/code/source/pug/punchedCard.pug
@@ -1,4 +1,4 @@
 link(rel='stylesheet', type='text/css', href='../css/punchedCard.css')
 
-md-content.md-padding.punchedCardBackground(ng-controller='punchedCardController as pcc')
+md-content.md-padding.punchedCardBackground(ng-cloak ng-controller='punchedCardController as pcc')
   md-calendar(ng-model="myDate" md-min-date="minDate" md-max-date="maxDate" md-date-filter="datefilter")
