--- a/code/source/sass/punchedCard.sass
+++ b/code/source/sass/punchedCard.sass
@@ -15,6 +15,8 @@
       width: 100%
       .md-virtual-repeat-scroller
         width: 100% !important
+        .md-virtual-repeat-sizer
+          height: auto !important
         .md-calendar
           width: 100%
           .md-calendar-month-label
