--- a/code/source/pug/newPost.pug
+++ b/code/source/pug/newPost.pug
@@ -1,9 +1,11 @@
 link(rel='stylesheet', type='text/css', href='../css/newPost.css')
 
 md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc')
-  md-card.md-padding
-    textarea.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
-  md-card(layout='column')
+  div.md-padding
+    h2.md-title.title 创建新的时间节点
+  md-card
+    textarea.md-padding.simpleTextarea(rows='8', md-autofocus, placeholder='说说你想说什么吧~')
+    md-divider
     md-button.addFriend(ng-click='showFriendsList()')
       md-icon(md-svg-src='../svg/circleAdd.svg')
       span 邀请好友合并节点
@@ -12,6 +14,18 @@ md-content.newPostBackground(ng-cloak ng-controller='newPostController as nc')
         img.md-avatar(ng-src='{{friend.avatar}}')
         p {{friend.name}}
         md-checkbox.md-secondary(ng-model='friend.isSelected')
+    md-divider
     md-button.addFriend(ng-click='visitPhoto()')
       md-icon(md-svg-src='../svg/photo.svg')
       span 拍照或选取照片
+  div.md-padding
+    h2.md-title.title 时间囊
+  div.md-padding(layout='row')
+    div(flex)
+      md-card.leftCard(ng-repeat='node in nodes', ng-if='$index % 2 == 0')
+        div.imageContainer(style='background-image: url("{{node.imagePath}}")')
+        div.priority(ng-click='changePriority($index)' class='{{priorityLevels[node.priorityLevel % 3]}}') {{priorityLevels[node.priorityLevel % 3]}}
+    div(flex)
+      md-card.rightCard(ng-repeat='node in nodes', ng-if='$index % 2 == 1')
+        div.imageContainer(style='background-image: url("{{node.imagePath}}")')
+        div.priority(ng-click='changePriority($index)' class='{{priorityLevels[node.priorityLevel % 3]}}') {{priorityLevels[node.priorityLevel % 3]}}
