--- a/code/source/sass/newPost.sass
+++ b/code/source/sass/newPost.sass
@@ -2,6 +2,9 @@
   background-color: #f2f2f2 !important
   height: 100%
 
+  .title
+    margin: 8px 0px 0px 0px
+
   .simpleTextarea
     border: 0
     outline: none
@@ -15,3 +18,37 @@
 
     md-icon
       margin: 0px 8px 0px 8px
+
+  .imageContainer
+    width: 100%
+    height: 180px
+    background-repeat: no-repeat
+    background-position: center center
+    background-size: cover
+    -webkit-background-size: cover
+
+  .priority
+    color: white
+    text-align: center
+    line-height: 32px
+    height: 32px
+    width: 32px
+    border-radius: 16px
+    position: absolute
+    top: 4px
+    left: 4px
+    outline: none
+
+  .H
+    background-color: #F44336
+  .M
+    background-color: #2196F3
+  .L
+    background-color: #43A047
+
+  .leftCard
+    margin: 0px 4px 8px 0px
+    position: relative
+  .rightCard
+    margin: 0px 0px 8px 4px
+    position: relative
