--- a/code/static/css/newPost.css
+++ b/code/static/css/newPost.css
@@ -1,6 +1,8 @@
 .newPostBackground {
   background-color: #f2f2f2 !important;
   height: 100%; }
+  .newPostBackground .title {
+    margin: 8px 0px 0px 0px; }
   .newPostBackground .simpleTextarea {
     border: 0;
     outline: none;
@@ -12,3 +14,33 @@
     color: #525252; }
     .newPostBackground .addFriend md-icon {
       margin: 0px 8px 0px 8px; }
+  .newPostBackground .imageContainer {
+    width: 100%;
+    height: 180px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    -webkit-background-size: cover; }
+  .newPostBackground .priority {
+    color: white;
+    text-align: center;
+    line-height: 32px;
+    height: 32px;
+    width: 32px;
+    border-radius: 16px;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    outline: none; }
+  .newPostBackground .H {
+    background-color: #F44336; }
+  .newPostBackground .M {
+    background-color: #2196F3; }
+  .newPostBackground .L {
+    background-color: #43A047; }
+  .newPostBackground .leftCard {
+    margin: 0px 4px 8px 0px;
+    position: relative; }
+  .newPostBackground .rightCard {
+    margin: 0px 0px 8px 4px;
+    position: relative; }
