--- a/code/static/css/timeline.css
+++ b/code/static/css/timeline.css
@@ -1,2 +1,15 @@
 .timelineBackground {
-  background-color: #f2f2f2 !important; }
+  position: relative;
+  padding: 0; }
+  .timelineBackground canvas {
+    background-color: #f2f2f2;
+    position: absolute;
+    top: 0px;
+    z-index: 0; }
+  .timelineBackground button {
+    font-size: 25px;
+    margin: auto;
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px 0px 2px 0px; }
