--- a/code/source/sass/timeline.sass
+++ b/code/source/sass/timeline.sass
@@ -1,17 +1,12 @@
 .timelineBackground
   position: relative
-  padding: 0
 
-  canvas
-    background-color: #f2f2f2
-    position: absolute
-    top: 0px
-    z-index: 0
+  img
+    width: 100%
+    height: 100%
 
-  button
-    font-size: 25px
-    margin: auto
-    background-color: #f2f2f2
-    border-style: solid
-    border-color: #000000
-    border-width: 2px 0px 2px 0px
+  // canvas
+  //   background-color: #f2f2f2
+  //   position: absolute
+  //   top: 0px
+  //   z-index: 0
