--- a/code/static/css/timeline.css
+++ b/code/static/css/timeline.css
@@ -1,15 +1,5 @@
 .timelineBackground {
-  position: relative;
-  padding: 0; }
-  .timelineBackground canvas {
-    background-color: #f2f2f2;
-    position: absolute;
-    top: 0px;
-    z-index: 0; }
-  .timelineBackground button {
-    font-size: 25px;
-    margin: auto;
-    background-color: #f2f2f2;
-    border-style: solid;
-    border-color: #000000;
-    border-width: 2px 0px 2px 0px; }
+  position: relative; }
+  .timelineBackground img {
+    width: 100%;
+    height: 100%; }
